--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "container",
     "PSR-11"
   ],
-  "time": "2022-03-21",
+  "time": "2022-09-20",
   "license": "MIT",
   "authors": [
     {
@@ -19,7 +19,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "league/container": "^3.3",
-    "psr/container": "^1.0.0 || ^2.0.0"
+    "psr/container": "^1.1 || ^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
@@ -35,11 +35,5 @@
       "Pollen\\Container\\Test\\": "tests"
     }
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true
-  }
+  "minimum-stability": "dev"
 }
